Fixed twitter widget spacing when last on page, stoppd navigation controls showing when navigation is not open.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -333,7 +333,7 @@ body {
 
     .widget {
         @media @mobile-650px {
-            margin-bottom: 40px!important;
+            margin-bottom: 50px!important;
         }
     }
 
