--- a/stylesheets/widgets/twitter.less
+++ b/stylesheets/widgets/twitter.less
@@ -123,6 +123,10 @@
         @media @mobile-650px {
             font-size: 16px;
             line-height: 28px;
+
+            a {
+                font-size: 16px;
+            }
         }
     }
 
